--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
-            background-image: url('—Pngtree—black creative wine glass corporate_1029490.jpg');
+            background-image: url('pratik-gupta-z7ES_ScFPhg-unsplash.jpg');
             background-repeat: repeat;
             opacity: 0.6;
         }
@@ -36,7 +36,7 @@
 
         /* Form styles */
         .form-container {
-            background-color: #fff;
+            background-color: transparent;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -46,9 +46,10 @@
         }
 
         .form-container label {
-            font-size: 18px;
+            font-size: 28px;
             margin-bottom: 5px;
             display: block;
+            color : white
         }
 
         .form-container input[type="text"],
@@ -60,6 +61,8 @@
             margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 5px;
+            background-color: transparent;
+            color : white
         }
 
         .form-container button {
