--- a/templates/result.html
+++ b/templates/result.html
@@ -16,7 +16,7 @@
     <h2>Analysis Results</h2>
     <p>Here are the results of your analysis:</p>
 
-    <p> {{ result }}</p>
+    <p> {{ prediction }}</p>
     <!-- You can display the results dynamically here using Flask templates -->
     <a href="/">Go Back to Home</a>
 </div>
