--- a/templates/home.html
+++ b/templates/home.html
@@ -212,11 +212,16 @@
     <a href="https://www.linkedin.com/in/satyamsharma61541425b/" target="_blank"><i class="fab fa-linkedin"></i></a>
     <a href="https://medium.com/@codexistslonglastingnotfog/django-rest-framework-a-step-by-step-guide-with-code-examples-efe9665b59d8" target="_blank"><i class="fab fa-medium"></i></a>
 </footer>
+<div class="buttons-container">
+    <div class="button-box">
+        <a href="static/smoking.pdf" download>
+        <button>Download Pdf</button>
+    </div>
 
     <div class="button-box">
         <a href="/eda">
-        <button>Project Detail</button>
-    </div>
+            <button>Documentation</button>
+</div>
 </div>
 
 
