added train button

--- a/templates/home.html
+++ b/templates/home.html
@@ -142,6 +142,11 @@
 <header>
     <h1>Welcome to the Drink Detector</h1>
     <p>Discover Your Inner Drink Hero or Zero!</p>
+
+    <div class="button-box" style="position: absolute; top: 20px; left: 20px;">
+        <a href="/train"></a>
+        <button>Train</button>
+    </div>
 </header>
 
 {{ current_time }}
