--- a/templates/home.html
+++ b/templates/home.html
@@ -143,10 +143,7 @@
     <h1>Welcome to the Drink Detector</h1>
     <p>Discover Your Inner Drink Hero or Zero!</p>
 
-    <div class="button-box" style="position: absolute; top: 20px; left: 20px;">
-        <a href="/train"></a>
-        <button>Train</button>
-    </div>
+
 </header>
 
 {{ current_time }}
@@ -229,17 +226,18 @@
     <a href="https://www.linkedin.com/in/satyamsharma61541425b/" target="_blank"><i class="fab fa-linkedin"></i></a>
     <a href="https://medium.com/@codexistslonglastingnotfog/django-rest-framework-a-step-by-step-guide-with-code-examples-efe9665b59d8" target="_blank"><i class="fab fa-medium"></i></a>
 </footer>
-<div class="buttons-container">
-    <div class="button-box">
-        <button>Documentation</button>
-    </div>
-    <div class="button-box">
-        <button>Exploratory Data Analysis</button>
-    </div>
-    <div class="button-box">
-        <button>Article </button>
-    </div>
-</div>
+<!--<div class="buttons-container">-->
+<!--    <div class="button-box">-->
+<!--        <button>Documentation</button>-->
+<!--    </div>-->
+<!--    <div class="button-box">-->
+<!--        <-->
+<!--        <button>Exploratory Data Analysis</button>-->
+<!--    </div>-->
+<!--    <div class="button-box">-->
+<!--        <button>Article </button>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 
